# app

./: .gitignore  README.md  docker-compose-dev.yml.example  pyproject.toml
compose/django/: Dockerfile  docker-entrypoint.sh
compose/django/commands/: web.sh
src/: manage.py
src/api/: fields.py  permissions.py  tests.py  validators.py
src/api/urls/: docs.py  documented.py
src/api/views/: __init__.py
src/api/views/register_add/: serializers.py  tests.py  views.py
src/api/views/register_cancel/: serializers.py  tests.py  views.py
src/api/views/register_edit/: serializers.py  tests.py  views.py
src/api/yasg/: generators.py  schemas.py
src/las/: admin.py  asgi.py  factories.py  logger.py  mixins.py  test_mixin.py  wsgi.py
src/las/migrations/: 0001_initial.py  0002_generate_receipt_number_function.py  0003_alter_subjectaccumulation_name.py
src/las/models/: __init__.py  accumulation_register.py  action_type.py  external_action_process.py  instance.py  liabilities_type.py  subject_accumulation.py  user.py
src/las/services/: las.py  tests.py
src/las/services/register_add/: handlers.py  tests.py
src/las/services/register_cancel/: handlers.py  tests.py
src/las/services/register_edit/: handlers.py  tests.py
src/las/services/tools/: receipt_number.py  subject_accumulation.py
src/las/settings/: common.py  local.py.example  logging.py
